# mouseion

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.sim  README.md  cloudbuild.yaml  docker-compose.yaml
.github/workflows/: build.yaml  check-lint-test.yaml  ci.yaml  ci.yml
dummy_data/: 2023-08-01_messages.json
src/: archive_entries.rs  archiver.rs  block_submission.rs  block_submissions.rs  bundle_aggregator.rs  bundle_shipper.rs  compression.rs  env.rs  health.rs  lib.rs  log.rs  main.rs  message_archiver.rs  message_consumer.rs  messages.rs  object_storage.rs  object_stores.rs  operation_constants.rs  performance.rs  redis_decoding.rs  run.rs  serve.rs  server.rs  trace_memory.rs  units.rs
src/bundle_aggregator/: hashmap_size.rs  mod.rs
src/compress_archive_entries/: gzip_compressor.rs  mod.rs
src/health/: message.rs  message_consumer.rs  mod.rs  nats.rs  redis.rs  redis_consumer.rs
src/message_consumer/: decoding.rs  mod.rs
src/object_store/: mod.rs
src/pull_archive_entries/: mod.rs
src/pull_archive_entries/redis_consumer/: decoding.rs  mod.rs
src/redis_consumer/: ack_submissions.rs  decoding.rs  mod.rs  new_submissions.rs  pending_submissions.rs
src/store_archive_entries/: compressed_entries_store.rs  mod.rs
tests/: integration.rs  mod.rs
tests/fixtures/: 1697056058008140-0x8b6b5967a9651ead03112cf89826655e837f4b2dbf50c8a418e1ca7923248097.json
