[package]
name = "payload-archiver"
version = "1.15.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-nats = "0.31"
async-trait = "0.1"
axum = "0.6"
bytes = "1"
chrono = { version = "0.4", default-features = false }
flate2 = "1"
futures = "0.3"
lazy_static = "1"
memory-stats = "1.1.0"
object_store = { version = "0.6", features = ["aws"] }
pin-project = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
