[package]
name = "mouseion"
version = "4.3.0"
edition = "2021"
default-run = "mouseion"

[[bin]]
name = "mouseion"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.73"
axum = "0.6.20"
bytes = "1.4.0"
bytes-utils = "0.1.3"
chrono = { version = "0.4.26", default-features = false }
flate2 = "1.0.27"
fred = { version = "6.3.0" }
futures = "0.3.28"
lazy_static = "1.4.0"
memory-stats = "1.1.0"
nanoid = "0.4.0"
object_store = { version = "0.7.0", features = ["aws"] }
pin-project = "1.1.3"
serde = "1.0.185"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = [
	"macros",
	"rt-multi-thread",
	"sync",
	"time",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = true, features = [
	"env-filter",
	"json",
] }
